--- a/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang_ho.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-02-28 22:50+0200\n"
+"PO-Revision-Date: 2013-03-04 20:37+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "Language: fr\n"
@@ -7152,7 +7152,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:628
 #, php-format
 msgid "of"
-msgstr ""
+msgstr " os "
 
 #: ../code/application/views/helpfile/pofields.php:629
 #, php-format
@@ -7202,7 +7202,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:647
 #, php-format
 msgid "Results"
-msgstr ""
+msgstr "Resultados"
 
 #: ../code/application/views/helpfile/pofields.php:648
 #, php-format
