--- a/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
@@ -7167,7 +7167,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:628
 #, php-format
 msgid "of"
-msgstr ""
+msgstr " de "
 
 #: ../code/application/views/helpfile/pofields.php:629
 #, php-format
@@ -7217,7 +7217,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:647
 #, php-format
 msgid "Results"
-msgstr ""
+msgstr "Résultats"
 
 #: ../code/application/views/helpfile/pofields.php:648
 #, php-format
