--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-02-28 22:39+0200\n"
+"PO-Revision-Date: 2013-03-04 20:32+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -6977,7 +6976,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:628
 #, php-format
 msgid "of"
-msgstr ""
+msgstr " 의 "
 
 #: ../code/application/views/helpfile/pofields.php:629
 #, php-format
@@ -7027,7 +7026,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:647
 #, php-format
 msgid "Results"
-msgstr ""
+msgstr "결과"
 
 #: ../code/application/views/helpfile/pofields.php:648
 #, php-format
