Changes in ES language

--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj_es.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj_es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-04 22:12+0200\n"
+"PO-Revision-Date: 2013-03-05 20:14+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1019,7 +1019,7 @@ msgstr "Carmen J, Lima"
 #: ../code/application/views/includes/testimonials.php:39
 msgid "Choix, prix, sécurité, confirmation. Rien a dire : site super ! "
 msgstr ""
-"Selección, precio, seguridad, confirmación... Nada más que decir: gran sitio!"
+"Selección, precio, seguridad, confirmación… Nada más que decir: gran sitio!"
 
 #: ../code/application/views/includes/testimonials.php:46
 #: ../code/application/views/includes/testimonials.php:48
@@ -1327,7 +1327,7 @@ msgstr "Femenino"
 #: ../code/application/views/hb/booking_view.php:421
 #: ../code/application/controllers/user.php:83
 msgid "Téléphone"
-msgstr "Teléfono celular en caso la propiedad necesitea comunicarse con usted"
+msgstr "Teléfono celular en caso la propiedad necesites comunicarse con usted"
 
 #: ../code/application/views/mobile/user/user_profile.php:46
 #: ../code/application/views/restricted/user_profile.php:78
@@ -5096,10 +5096,10 @@ msgid ""
 "another Agent, please click the LogOut link below and open a new chat from "
 "the website chat link."
 msgstr ""
-"Lo siento, su agente no esta en la conversacion. Si desea conversar con otro "
+"Lo siento, su agente no esta en la conversación. Si desea conversar con otro "
 "agente, por favor haga clic en el enlace de desconexión a continuación y "
-"abrir una nueva sesión de conversacion en la página web en el enlace de "
-"conversacion."
+"abrir una nueva sesión de conversación en la página web en el enlace de "
+"conversación."
 
 #: ../code/application/views/helpfile/pofields.php:79
 #, php-format
@@ -5417,7 +5417,7 @@ msgid ""
 "You must pay for the whole private room, even if you do not need all the "
 "beds. The room can not be shared."
 msgstr ""
-"Usted de debera pagar por toda la habitación privada aunque no necesite "
+"Usted de deberá pagar por toda la habitación privada aunque no necesite "
 "todas las camas."
 
 #: ../code/application/views/helpfile/pofields.php:170
@@ -6449,7 +6449,7 @@ msgid ""
 "protected by a secure connection."
 msgstr ""
 "Reservar en nuestra página web es seguro.  Cuando reserva con nosotros sus "
-"datos están protegidos por una conección segura."
+"datos están protegidos por una conexión segura."
 
 #: ../code/application/views/helpfile/pofields.php:423
 #, php-format
@@ -6517,7 +6517,7 @@ msgid ""
 "districts, train stations and more…"
 msgstr ""
 "1 Millón de evaluaciones reales, Albergues Juveniles con desayuno gratuito, "
-"mapas, fotos, busque por distritos, estaciones de tren y más..."
+"mapas, fotos, busque por distritos, estaciones de tren y más…"
 
 #: ../code/application/views/helpfile/pofields.php:434
 #, php-format
@@ -6661,7 +6661,7 @@ msgstr "Por favor ingresar fechas para ver todas las propiedades en %s"
 #: ../code/application/views/helpfile/pofields.php:468
 #, php-format
 msgid "Compare all hostels in %s"
-msgstr "Los Albergues Juveniles mejor ranqueados  en %s"
+msgstr "Los Albergues Juveniles mejor rancheados  en %s"
 
 #: ../code/application/views/helpfile/pofields.php:505
 #, php-format
@@ -7018,7 +7018,7 @@ msgid ""
 msgstr ""
 "Para armar su presupuesto, lo invitamos a ver la lista de hostales y precios "
 "en nuestra página web  y a que nos contacte nuevamente, 1 semana antes de "
-"tomar su decisión,   cuando todos los detalles esten finalizados. "
+"tomar su decisión,   cuando todos los detalles estén finalizados. "
 
 #: ../code/application/views/helpfile/pofields.php:592
 #, php-format
@@ -7149,17 +7149,9 @@ msgid "Please specify a type of group."
 msgstr "Por favor, especifica un tipo de grupo."
 
 #: ../code/application/views/helpfile/pofields.php:623
-#, fuzzy, php-format
+#, php-format
 msgid "Please specify an age range for your group."
-msgstr ""
-"<b>Compare precios y hostales</b><br><br>Los invito a hacer una búsqueda "
-"haciendo <a href=\"http://reservations.bookhostels.com/youth-hostel.com/?"
-"SubID=spain\" title=\"reserva de grupo\"> click en el link </a>para poder "
-"encontrar el mejor hostal, adecuado a sus posibilidades y precios.<br>Tómese "
-"su tiempo para ver el tipo de dormitorios que se ofrece, si el desayuno está "
-"incluido, ubicación en el mapa y otra información importante que lo ayude en "
-"su viaje.<br>Si no obtiene resultados en su búsqueda por favor cambie la "
-"fecha o reduzca el número de personas en su búsqueda.<br><br>"
+msgstr "Por favor especifica un rango de edad para tu grupo."
 
 #: ../code/application/views/helpfile/pofields.php:624
 #, php-format
@@ -7214,9 +7206,9 @@ msgid "Privates From"
 msgstr "Habitaciones Privadas desde"
 
 #: ../code/application/views/helpfile/pofields.php:639
-#, fuzzy, php-format
+#, php-format
 msgid "Rating Overall"
-msgstr "En general"
+msgstr "Puntuación Total"
 
 #: ../code/application/views/helpfile/pofields.php:642
 #, php-format
