--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-04 22:17+0200\n"
+"PO-Revision-Date: 2013-03-05 21:12+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1019,7 +1019,7 @@ msgstr "Carmen J, Lima"
 #: ../code/application/views/includes/testimonials.php:39
 msgid "Choix, prix, sécurité, confirmation. Rien a dire : site super ! "
 msgstr ""
-"Selección, precio, seguridad, confirmación... Nada más que decir: gran sitio!"
+"Selección, precio, seguridad, confirmación… Nada más que decir: gran sitio!"
 
 #: ../code/application/views/includes/testimonials.php:46
 #: ../code/application/views/includes/testimonials.php:48
@@ -1853,7 +1853,7 @@ msgid ""
 msgstr ""
 "Si la tarjeta de crédito o cuenta bancaria con la que hizo su reserva se "
 "vuelve inválida antes de su llegada, por favor comunique esta ocurrencia al "
-"alojamiento para reconfirmar sus reservaciones y coordinar un método alterno "
+"alojamiento para reconfortar sus reservaciones y coordinar un método alterno "
 "de pago."
 
 #: ../code/application/views/mobile/hw/booking_end_view.php:234
@@ -3197,7 +3197,6 @@ msgstr ""
 "encontrará un albergue adecuado y barato."
 
 #: ../code/application/views/error400.php:10
-#, fuzzy
 msgid "Erreur 400 - Page Introuvable"
 msgstr "Error 404 - Página no encontrada"
 
@@ -3350,7 +3349,7 @@ msgstr "Lugares de interés (2kms)"
 #: ../code/application/views/city_ajax_view.php:222
 #, php-format
 msgid "Liste des logements pas chers à %s"
-msgstr "Resultados de busqueda :  %s "
+msgstr "Resultados de búsqueda :  %s "
 
 #: ../code/application/views/city_view.php:186
 #, php-format
@@ -3977,7 +3976,7 @@ msgstr "Ambiente"
 #: ../code/application/views/helpfile/pofields.php:641
 #, php-format
 msgid "Staff"
-msgstr "El personal"
+msgstr "Personal"
 
 #: ../code/application/views/hb/hostel_view.php:50
 #: ../code/application/views/group_request.php:218
@@ -3985,7 +3984,7 @@ msgstr "El personal"
 #: ../code/application/views/helpfile/pofields.php:632
 #, php-format
 msgid "Location"
-msgstr "Ubicacion"
+msgstr "Situación"
 
 #: ../code/application/views/hb/hostel_view.php:53
 #: ../code/application/views/helpfile/pofields.php:643
@@ -6517,7 +6516,7 @@ msgid ""
 "districts, train stations and more…"
 msgstr ""
 "1 Millón de evaluaciones reales, Albergues Juveniles con desayuno gratuito, "
-"mapas, fotos, busque por distritos, estaciones de tren y más..."
+"mapas, fotos, busque por distritos, estaciones de tren y más…"
 
 #: ../code/application/views/helpfile/pofields.php:434
 #, php-format
@@ -6661,7 +6660,7 @@ msgstr "Por favor ingresar fechas para ver todas las propiedades en %s"
 #: ../code/application/views/helpfile/pofields.php:468
 #, php-format
 msgid "Compare all hostels in %s"
-msgstr "Los Albergues Juveniles mejor ranqueados  en %s"
+msgstr "Los Albergues Juveniles mejor rancheados  en %s"
 
 #: ../code/application/views/helpfile/pofields.php:505
 #, php-format
@@ -7032,7 +7031,7 @@ msgstr "Gracias por su confianza y apoyo."
 #: ../code/application/views/helpfile/pofields.php:594
 #, php-format
 msgid "Thank you for your request."
-msgstr "Gracias por su solucitud."
+msgstr "Gracias por su solicitud."
 
 #: ../code/application/views/helpfile/pofields.php:595
 #, php-format
@@ -7100,7 +7099,7 @@ msgstr "Rango de Edad:"
 #: ../code/application/views/helpfile/pofields.php:613
 #, php-format
 msgid "Choose one..."
-msgstr ""
+msgstr "Elige uno..."
 
 #: ../code/application/views/helpfile/pofields.php:614
 #, php-format
@@ -7148,17 +7147,9 @@ msgid "Please specify a type of group."
 msgstr "Por favor, especifica un tipo de grupo."
 
 #: ../code/application/views/helpfile/pofields.php:623
-#, fuzzy, php-format
+#, php-format
 msgid "Please specify an age range for your group."
-msgstr ""
-"<b>Compare precios y hostales</b><br><br>Los invito a hacer una búsqueda "
-"haciendo <a href=\"http://reservations.bookhostels.com/youth-hostel.com/?"
-"SubID=spain\" title=\"reserva de grupo\"> click en el link </a>para poder "
-"encontrar el mejor hostal, adecuado a sus posibilidades y precios.<br>Tómese "
-"su tiempo para ver el tipo de dormitorios que se ofrece, si el desayuno está "
-"incluido, ubicación en el mapa y otra información importante que lo ayude en "
-"su viaje.<br>Si no obtiene resultados en su búsqueda por favor cambie la "
-"fecha o reduzca el número de personas en su búsqueda.<br><br>"
+msgstr "Por favor especifica un rango de edad para tu grupo."
 
 #: ../code/application/views/helpfile/pofields.php:624
 #, php-format
@@ -7213,9 +7204,9 @@ msgid "Privates From"
 msgstr "Habitaciones Privadas desde %d"
 
 #: ../code/application/views/helpfile/pofields.php:639
-#, fuzzy, php-format
+#, php-format
 msgid "Rating Overall"
-msgstr "En general"
+msgstr "Puntuación Total"
 
 #: ../code/application/views/helpfile/pofields.php:642
 #, php-format
@@ -7333,14 +7324,14 @@ msgid "Fill in the \"From\" email"
 msgstr ""
 
 #: ../code/application/views/helpfile/pofields.php:670
-#, fuzzy, php-format
+#, php-format
 msgid "Invalid \"From\" email"
 msgstr "Formato inválido"
 
 #: ../code/application/views/helpfile/pofields.php:671
 #, fuzzy, php-format
 msgid "Your message has been sent to %s"
-msgstr "Un correo electronico ha sido mandado a su direccion"
+msgstr "Un correo electrónico ha sido mandado a su dirección"
 
 #: ../code/application/views/helpfile/pofields.php:672
 #, php-format
