--- a/languages/ci/locale/fr_FR/LC_MESSAGES/hb_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/hb_lang.po
@@ -584,9 +584,9 @@ msgstr "Guides"
 
 #: ../code/application/views/includes/recent_property_view_cookie.php:9
 #: ../code/application/views/helpfile/pofields.php:690
-#, fuzzy, php-format
+#, php-format
 msgid "Recently Viewed"
-msgstr "Dernieres propriétés vues"
+msgstr "Récemment vues"
 
 #: ../code/application/views/includes/recent_property_view_cookie.php:9
 #, php-format
