--- a/languages/ci/locale/en_GB/LC_MESSAGES/auberge_lang_asia.po
+++ b/languages/ci/locale/en_GB/LC_MESSAGES/auberge_lang_asia.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-06 20:08+0200\n"
+"PO-Revision-Date: 2013-03-06 21:45+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -950,7 +950,7 @@ msgstr ""
 "offers last minute booking of hostel rooms and low-cost housing in cities "
 "like Paris, France; London, England; Barcelona, Spain; New York, USA; Rome,"
 "Italy; Amsterdam the Netherlands; Dublin, Ireland; Madrid, Spain; Prague in "
-"the Czech Republic ...We also provide last minute information, guides and "
+"the Czech Republic …We also provide last minute information, guides and "
 "reviews for your perfect youth hostel."
 
 #: ../code/application/views/includes/footer.php:105
@@ -7052,9 +7052,9 @@ msgid "Please specify an age range for your group."
 msgstr "We have found a great offer for your group."
 
 #: ../code/application/views/helpfile/pofields.php:624
-#, fuzzy, php-format
+#, php-format
 msgid "Map"
-msgstr "%s"
+msgstr "Map"
 
 #: ../code/application/views/helpfile/pofields.php:626
 #, fuzzy, php-format
