--- a/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
@@ -2884,7 +2884,7 @@ msgid ""
 "%s – Hotels in the %s district. Maps for %s, Photos and Reviews for each "
 "Hotel in %s."
 msgstr ""
-"%s - Hôtels dans le quartier de %s. Cartes pour %s, photos et commentaires "
+"%s - Hôtelshostilese quartier de %s. Cartes pour %s, photos et commentaires "
 "pour chaque hôtel à %s. "
 
 #: ../code/application/views/city_lp.php:18
@@ -5480,7 +5480,7 @@ msgstr "Derniere réservations:"
 #: ../code/application/views/helpfile/pofields.php:625
 #, php-format
 msgid "Review"
-msgstr "Commentaires"
+msgstr "Commentaire"
 
 #: ../code/application/views/helpfile/pofields.php:185
 #, php-format
@@ -7150,9 +7150,9 @@ msgid "Please specify an age range for your group."
 msgstr "Nous avons trouvé une super offre pour votre groupe."
 
 #: ../code/application/views/helpfile/pofields.php:624
-#, fuzzy, php-format
+#, php-format
 msgid "Map"
-msgstr "%s"
+msgstr "Carte"
 
 #: ../code/application/views/helpfile/pofields.php:626
 #, fuzzy, php-format
