--- a/languages/ci/locale/pl_PL/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/pl_PL/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-06 20:05+0200\n"
+"PO-Revision-Date: 2013-03-06 21:33+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -5426,7 +5426,7 @@ msgstr "Moje rezerwacje:"
 #: ../code/application/views/helpfile/pofields.php:625
 #, php-format
 msgid "Review"
-msgstr "Ocena"
+msgstr "Przegląd"
 
 #: ../code/application/views/helpfile/pofields.php:185
 #, php-format
@@ -7080,9 +7080,9 @@ msgid "Please specify an age range for your group."
 msgstr "Znaleźliśmy wspaniałą ofertę dla Twojej grupy."
 
 #: ../code/application/views/helpfile/pofields.php:624
-#, fuzzy, php-format
+#, php-format
 msgid "Map"
-msgstr "%s"
+msgstr "Mapa"
 
 #: ../code/application/views/helpfile/pofields.php:626
 #, fuzzy, php-format
