--- a/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-04 20:37+0200\n"
+"PO-Revision-Date: 2013-03-06 21:40+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "Language: fr\n"
@@ -5467,7 +5467,7 @@ msgstr "Última reservas:"
 #: ../code/application/views/helpfile/pofields.php:625
 #, php-format
 msgid "Review"
-msgstr "Revisão"
+msgstr "Análise"
 
 #: ../code/application/views/helpfile/pofields.php:185
 #, php-format
@@ -7132,9 +7132,9 @@ msgstr ""
 "favor, mude as datas ou reduza o número máximo de pessoas por Albergues."
 
 #: ../code/application/views/helpfile/pofields.php:624
-#, fuzzy, php-format
+#, php-format
 msgid "Map"
-msgstr "%s"
+msgstr "Mapa"
 
 #: ../code/application/views/helpfile/pofields.php:626
 #, fuzzy, php-format
