--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang.po
@@ -5471,7 +5471,7 @@ msgstr "Derniere réservations:"
 #: ../code/application/views/helpfile/pofields.php:625
 #, php-format
 msgid "Review"
-msgstr "Commentaires"
+msgstr "Commentaire"
 
 #: ../code/application/views/helpfile/pofields.php:185
 #, php-format
@@ -7141,9 +7141,9 @@ msgid "Please specify an age range for your group."
 msgstr "Nous avons trouvé une super offre pour votre groupe."
 
 #: ../code/application/views/helpfile/pofields.php:624
-#, fuzzy, php-format
+#, php-format
 msgid "Map"
-msgstr "%s"
+msgstr "Carte"
 
 #: ../code/application/views/helpfile/pofields.php:626
 #, fuzzy, php-format
