--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -5501,7 +5501,7 @@ msgstr "Derniere réservations:"
 #: ../code/application/views/helpfile/pofields.php:625
 #, php-format
 msgid "Review"
-msgstr "Commentaires"
+msgstr "Commentaire"
 
 #: ../code/application/views/helpfile/pofields.php:185
 #, php-format
@@ -7180,9 +7180,9 @@ msgstr ""
 "nombre maximum de personnes par auberge."
 
 #: ../code/application/views/helpfile/pofields.php:624
-#, fuzzy, php-format
+#, php-format
 msgid "Map"
-msgstr "%s"
+msgstr "Carte"
 
 #: ../code/application/views/helpfile/pofields.php:626
 #, fuzzy, php-format
