--- a/languages/ci/locale/fr_FR/LC_MESSAGES/hw_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/hw_lang.po
@@ -7180,14 +7180,14 @@ msgstr ""
 "nombre maximum de personnes par auberge."
 
 #: ../code/application/views/helpfile/pofields.php:624
-#, fuzzy, php-format
+#, php-format
 msgid "Map"
-msgstr "%s"
+msgstr "Carte"
 
 #: ../code/application/views/helpfile/pofields.php:626
-#, fuzzy, php-format
+#, php-format
 msgid "Reviews"
-msgstr "Commentaires"
+msgstr "Commentaire"
 
 #: ../code/application/views/helpfile/pofields.php:627
 #, php-format
