--- a/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-04 20:29+0200\n"
+"PO-Revision-Date: 2013-03-06 21:37+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -5342,7 +5342,7 @@ msgstr "最後のご予約："
 #: ../code/application/views/helpfile/pofields.php:625
 #, php-format
 msgid "Review"
-msgstr "レビュー"
+msgstr "口コミ"
 
 #: ../code/application/views/helpfile/pofields.php:185
 #, php-format
@@ -6981,9 +6981,9 @@ msgid "Please specify an age range for your group."
 msgstr "お客様のために素晴らしいオファーをご用意しました。"
 
 #: ../code/application/views/helpfile/pofields.php:624
-#, fuzzy, php-format
+#, php-format
 msgid "Map"
-msgstr "%s"
+msgstr "地図"
 
 #: ../code/application/views/helpfile/pofields.php:626
 #, fuzzy, php-format
