--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-04 20:32+0200\n"
+"PO-Revision-Date: 2013-03-06 21:34+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -5325,7 +5325,7 @@ msgstr "지난 예약상황 :"
 #: ../code/application/views/helpfile/pofields.php:625
 #, php-format
 msgid "Review"
-msgstr "후기"
+msgstr "검토"
 
 #: ../code/application/views/helpfile/pofields.php:185
 #, php-format
@@ -6959,9 +6959,9 @@ msgid "Please specify an age range for your group."
 msgstr "귀하의 단체를 위한 최고의 제안을 확인했습니다."
 
 #: ../code/application/views/helpfile/pofields.php:624
-#, fuzzy, php-format
+#, php-format
 msgid "Map"
-msgstr "%s-지도"
+msgstr "지도"
 
 #: ../code/application/views/helpfile/pofields.php:626
 #, fuzzy, php-format
