Added missing strings

--- a/languages/ci/locale/en_GB/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/en_GB/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-06 21:45+0200\n"
+"PO-Revision-Date: 2013-03-06 22:10+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -589,7 +589,7 @@ msgstr "Recently Viewed"
 #: ../code/application/views/includes/recent_property_view_cookie.php:9
 #, php-format
 msgid "last %d"
-msgstr ""
+msgstr "last %d"
 
 #: ../code/application/views/includes/top_filter.php:24
 #: ../code/application/views/helpfile/pofields.php:282
