--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang.po
@@ -591,7 +591,7 @@ msgstr "Récemment vues"
 #: ../code/application/views/includes/recent_property_view_cookie.php:9
 #, php-format
 msgid "last %d"
-msgstr ""
+msgstr "les %d dernières "
 
 #: ../code/application/views/includes/top_filter.php:24
 #: ../code/application/views/helpfile/pofields.php:282
