--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_xo.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_xo.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-06 21:51+0200\n"
+"PO-Revision-Date: 2013-03-06 22:09+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -595,7 +595,7 @@ msgstr "Последние просмотры"
 #: ../code/application/views/includes/recent_property_view_cookie.php:9
 #, php-format
 msgid "last %d"
-msgstr ""
+msgstr "последние %d"
 
 #: ../code/application/views/includes/top_filter.php:24
 #: ../code/application/views/helpfile/pofields.php:282
