Added all ES translations

--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-06 22:03+0200\n"
+"PO-Revision-Date: 2013-03-08 14:11+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -7122,9 +7122,9 @@ msgid "College / University"
 msgstr "Universidad"
 
 #: ../code/application/views/helpfile/pofields.php:618
-#, fuzzy, php-format
+#, php-format
 msgid "Business trip"
-msgstr "Viajes de Negocios"
+msgstr "Viaje de Negocios"
 
 #: ../code/application/views/helpfile/pofields.php:619
 #, php-format
@@ -7196,7 +7196,7 @@ msgstr "Comparación Rápida"
 #: ../code/application/views/helpfile/pofields.php:637
 #, fuzzy, php-format
 msgid "Dorms From"
-msgstr "Dormitorios Desde %d"
+msgstr "Dormitorios desde %d"
 
 #: ../code/application/views/helpfile/pofields.php:638
 #, fuzzy, php-format
@@ -7231,7 +7231,7 @@ msgstr "Resultado"
 #: ../code/application/views/helpfile/pofields.php:649
 #, fuzzy, php-format
 msgid "Only %d properties can be compared"
-msgstr "Only 5 properties can be compared"
+msgstr "Solo se pueden comparar 5 alojamientos"
 
 #: ../code/application/views/helpfile/pofields.php:650
 #, php-format
@@ -7252,6 +7252,8 @@ msgstr "Eliminar Todo"
 #, php-format
 msgid "Please see selected properties to compare on top of this page."
 msgstr ""
+"Por favor, observa los alojamientos seleccionados para comparar en la parte "
+"superior de esta página."
 
 #: ../code/application/views/helpfile/pofields.php:654
 #, php-format
@@ -7271,57 +7273,57 @@ msgstr "Inicio"
 #: ../code/application/views/helpfile/pofields.php:657
 #, php-format
 msgid "Restore Everything"
-msgstr ""
+msgstr "Restaurar todo"
 
 #: ../code/application/views/helpfile/pofields.php:659
 #, php-format
 msgid "Compare (%d out of %d)"
-msgstr ""
+msgstr "Compara ( %d de %d)"
 
 #: ../code/application/views/helpfile/pofields.php:661
 #, php-format
 msgid "Show More"
-msgstr ""
+msgstr "Muestra Más"
 
 #: ../code/application/views/helpfile/pofields.php:662
 #, php-format
 msgid "Show Less"
-msgstr ""
+msgstr "Muestra Menos"
 
 #: ../code/application/views/helpfile/pofields.php:663
 #, php-format
 msgid "Not enough parameters"
-msgstr ""
+msgstr "No hay suficientes parámetros"
 
 #: ../code/application/views/helpfile/pofields.php:664
-#, fuzzy, php-format
+#, php-format
 msgid "Fill in the email"
-msgstr "Imprimir mapa"
+msgstr "Completa el email"
 
 #: ../code/application/views/helpfile/pofields.php:665
 #, php-format
 msgid "Invalid email recipient"
-msgstr ""
+msgstr "Email del destinatario inválido"
 
 #: ../code/application/views/helpfile/pofields.php:666
 #, php-format
 msgid "Fill in the subject"
-msgstr ""
+msgstr "Completa el asunto"
 
 #: ../code/application/views/helpfile/pofields.php:667
 #, php-format
 msgid "Fill in the message"
-msgstr ""
+msgstr "Completa el mensaje"
 
 #: ../code/application/views/helpfile/pofields.php:668
 #, php-format
 msgid "Fill in the \"From\" name"
-msgstr ""
+msgstr "Completa el nombre \"De\""
 
 #: ../code/application/views/helpfile/pofields.php:669
 #, php-format
 msgid "Fill in the \"From\" email"
-msgstr ""
+msgstr "Completa el email \"De\""
 
 #: ../code/application/views/helpfile/pofields.php:670
 #, php-format
@@ -7329,85 +7331,87 @@ msgid "Invalid \"From\" email"
 msgstr "Formato inválido"
 
 #: ../code/application/views/helpfile/pofields.php:671
-#, fuzzy, php-format
+#, php-format
 msgid "Your message has been sent to %s"
-msgstr "Un correo electrónico ha sido mandado a su dirección"
+msgstr "Tu mensaje ha sido enviado a %s"
 
 #: ../code/application/views/helpfile/pofields.php:672
 #, php-format
 msgid "From:"
-msgstr ""
+msgstr "De:"
 
 #: ../code/application/views/helpfile/pofields.php:673
-#, fuzzy, php-format
+#, php-format
 msgid "To:"
-msgstr "Total:"
+msgstr "Para:"
 
 #: ../code/application/views/helpfile/pofields.php:674
 #, php-format
 msgid "Subject:"
-msgstr ""
+msgstr "Asunto:"
 
 #: ../code/application/views/helpfile/pofields.php:675
-#, fuzzy, php-format
+#, php-format
 msgid "Message:"
-msgstr "Mensaje"
+msgstr "Mensaje:"
 
 #: ../code/application/views/helpfile/pofields.php:676
 #, php-format
 msgid "Send another message"
-msgstr ""
+msgstr "Enviar otro mensaje"
 
 #: ../code/application/views/helpfile/pofields.php:678
 #, php-format
 msgid ""
 "Mail this page to someone you know, or send it to yourself as a reminder."
 msgstr ""
+"Envía por email esta página a alguien que conozcas, o envíatela a ti mismo "
+"como recordatorio."
 
 #: ../code/application/views/helpfile/pofields.php:679
 #, php-format
 msgid "To (email)"
-msgstr ""
+msgstr "A (email)"
 
 #: ../code/application/views/helpfile/pofields.php:680
 #, php-format
 msgid "Subject"
-msgstr ""
+msgstr "Asunto"
 
 #: ../code/application/views/helpfile/pofields.php:682
-#, fuzzy, php-format
+#, php-format
 msgid "From (name)"
-msgstr "Correo electronico mandado"
+msgstr "De (nombre)"
 
 #: ../code/application/views/helpfile/pofields.php:683
 #, php-format
 msgid "From (email)"
-msgstr ""
+msgstr "De (email)"
 
 #: ../code/application/views/helpfile/pofields.php:684
 #, php-format
 msgid "Yes, I want to subscribe to the newsletter."
-msgstr ""
+msgstr "Si, quiero susbribirme a la newsletter."
 
 #: ../code/application/views/helpfile/pofields.php:685
-#, fuzzy, php-format
+#, php-format
 msgid "Send email"
-msgstr "Mandar correo electronico"
+msgstr "Enviar email"
 
 #: ../code/application/views/helpfile/pofields.php:687
 #, php-format
 msgid "Share PDF"
-msgstr ""
+msgstr "Compartir PDF"
 
 #: ../code/application/views/helpfile/pofields.php:688
 #, php-format
 msgid "Want to send a PDF copy of this page or quote by email?"
-msgstr ""
+msgstr "¿Quieres envíar una copia en PDF de esta página u oferta por email?"
 
 #: ../code/application/views/helpfile/pofields.php:689
-#, fuzzy, php-format
+#, php-format
 msgid "Send PDF"
-msgstr "Enviar"
+msgstr "Enviar PDF"
 
 #: ../code/application/views/helpfile/pofields.php:691
 #, php-format
@@ -7416,6 +7420,9 @@ msgid ""
 "continuing to browse our site you are agreeing to our Cookies Policy and use "
 "of cookies technology. Find out more"
 msgstr ""
+"Nosotros usamos las cookies para ofrecerte la mejor experiencia posible en "
+"nuestro sitio. Para continuar navegando por nuestra web debes aceptar "
+"nuestra Política de Cookies y del uso de la tecnología de cookies. Saber más"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
@@ -7458,9 +7465,8 @@ msgstr "Más información sobre esta propiedad"
 
 #: ../code/application/views/mustache/property_list.php:264
 #: ../code/application/views/mustache/property_list.php:275
-#, fuzzy
 msgid "Select"
-msgstr "Seleccione tarjeta"
+msgstr "Seleccionar"
 
 #: ../code/application/controllers/user.php:105
 msgid "Erreur lors de la mise à jour de votre profil."
